--- a/brainTech/styles/site-plan.css
+++ b/brainTech/styles/site-plan.css
@@ -5,7 +5,7 @@ Fonts are separated by a | */
 :root {
   /* change the values below to your colors from your palette */
   --primary-color: #0E54B1   ;
-  --secondary-color: #93CEF6 ;
+  --secondary-color: #41b9ff ;
   --accent1-color: #6F6F6F;
   --accent2-color: #FFFFFF;
 
@@ -16,13 +16,13 @@ Fonts are separated by a | */
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #0E54B1;  /* headlines on a white background */ 
   --headline-color-on-color: #FFFFFF; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #93CEF6; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: #41b9ff; /* paragraph text on a white background */ 
   --paragraph-color-on-color: #FFFFFF; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #93CEF6  ;
+  --paragraph-background-color: #41b9ff  ;
   --nav-link-color: #FFFFFF;
   --nav-background-color: #0E54B1;
   --nav-hover-link-color: white;
-  --nav-hover-background-color: #93CEF6;
+  --nav-hover-background-color: #41b9ff;
 }
 
 
