--- a/brainTech/styles/site-plan.css
+++ b/brainTech/styles/site-plan.css
@@ -38,6 +38,7 @@ body {
 img {
   display: block;
   margin: 0 auto;
+  max-width: 60%;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--heading-font);
@@ -61,10 +62,11 @@ header > h1, header > h2 {
   color: var(--headline-color-on-color);
 }
 
-p {
+p, li {
   font-family: var(--paragraph-font);
   color: var(--paragraph-color);
   padding: 1em;
+  text-align: left;
 }
 .colors {
   width: 100%;
