pictures and content added

--- a/brainTech/styles/site-plan.css
+++ b/brainTech/styles/site-plan.css
@@ -66,6 +66,8 @@ p, li {
   font-family: var(--paragraph-font);
   color: var(--paragraph-color);
   padding: 1em;
+}
+li{
   text-align: left;
 }
 .colors {
