--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -304,7 +304,7 @@ ul li:before{
 /* Responsive design */
 
 @media screen and (max-width: 900px) {
-    #hero, .home-grid {
+    #hero, .home-grid, .rivers-grid {
         display: block;
         height: auto;
     }
@@ -331,6 +331,14 @@ ul li:before{
     .rivers-card, .camping-card, .rapids-card { 
         margin: 50px auto;
         width: 60%;
+    }
+
+    .rivers-img1, .rivers-img2,.rivers-img3, .rivers-img{
+        margin: 50px 20px;
+        width: 80%;
+    }
+    .rivers1, .rivers2, .rivers3{
+        text-align: center;
     }
     #background {
         display: none;
