--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -301,6 +301,100 @@ ul li:before{
     box-shadow: 0 0 3px 2px rgba(0, 140, 186, 0.5);
     cursor: pointer;
 }
+
+/* ------------------------Contact Us Page------------------------ */
+.mainform{
+    margin: 50px auto;
+}
+h2{
+    text-align: center;
+}
+form {
+    /* Center the form on the page */
+    margin: 0 auto;
+    width: 400px;
+    /* Form outline */
+    padding: 1em;
+    border: 1px solid #396E94;
+    border-radius: 1em;
+  }
+
+  label {
+    /* Uniform size & alignment */
+    display: inline-block;
+    width: 90px;
+    text-align: right;
+    color: #2f675e;
+    margin: 15px 0;
+  }
+  
+  input,
+  textarea {
+    /* To make sure that all text fields have the same font settings
+       By default, textareas have a monospace font */
+    font: 1em sans-serif;
+  
+    /* Uniform text field size */
+    width: 300px;
+    box-sizing: border-box;
+  
+    /* Match form field borders */
+    border: 1px solid #396E94;
+    margin-top: 15px;
+  }
+  
+  input:focus,
+  textarea:focus {
+    /* Additional highlight for focused elements */
+    border-color: #396E94;
+  }
+  
+  textarea {
+    /* Align multiline text fields with their labels */
+    vertical-align: top;
+  
+    /* Provide space to type some text */
+    height: 5em;
+  }
+  
+  .button {
+    font-size: 16px;
+    padding: 10px 15px;
+    margin-top: 20px;
+    color: #2f675e;
+    border-radius: 5px;
+    border: none;
+    background-color: #2f675e;
+    color: #d0ccd0;
+ }
+  
+  button {
+    margin: 0 auto auto;
+    display: block;
+   
+  }
+
+  .button:hover{
+    background-color: #d0ccd0;
+    color:#2f675e;
+    border: 1px solid #396E94;
+    cursor: pointer;
+} 
+
+#feedback {
+    background-color: antiquewhite;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: .5em;
+    /* make this element invisible until we are ready for it */
+    display: none;      
+}
+.moveDown {
+    margin-top: 3em;
+}
+
 /* Responsive design */
 
 @media screen and (max-width: 900px) {
