--- a/brainTech/styles/styles.css
+++ b/brainTech/styles/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap');
 :root{
-    --heading-font: "Roboto", Verdana, Tahoma;
-    --paragraph-font: Montserrat, Helvetica, sans-serif;
+    --heading-font: "Montserrat" , Helvetica, sans-serif;
+    --paragraph-font: "Lato", sans-serif;
 
     --headline-color-on-white: #0E54B1;  /* headlines on a white background */ 
     --headline-color-on-color: #FFFFFF; /* headlines on a colored background */ 
@@ -9,29 +9,36 @@
     --paragraph-color-on-color: #FFFFFF; /* paragraph text on a colored background */ 
     --paragraph-background-color: #41b9ff  ;
     --nav-link-color: #FFFFFF;
-    --nav-background-color: #0E54B1;
-    --nav-hover-link-color: white;
+    --nav-background-color: rgb(14, 84, 177);
+    --nav-hover-link-color: #FFFFFF;
     --nav-hover-background-color: #41b9ff;
 }
 
-body{
-    background-color: #d0ccd0;
-    font-family: var(--paragraph-font);
-    font-size: 22px;
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+
+body, html {
+  height: 100%;
+  margin: 0 auto;
+  font: 400 18px/1.8 "Lato", sans-serif;
+  color: #777;
+  box-sizing: border-box;
+  padding: 0;
+  background-color: #FFFFFF;
+
+
 }
 header{
     background-color: var(--nav-background-color);
     color: var(--headline-color-on-color);
     display: grid;
     grid-template-columns: 150px auto;
-}
+    height: 100px;
+
+  }
 nav{
     background-color: var(--nav-background-color);
     display: flex;
     justify-content: space-around;
+    height: 100px;
 }
 nav a{
     color: #fbfcff;
@@ -48,30 +55,29 @@ nav a:link, nav a:visited {
   }
 
 #logo_link, .logo{
-    padding-top: 5px;
+    /* padding-top: 5px; */
     justify-self: center;
     align-self: center;
+    height: 100px;
+    width: 150px;
+    /* margin-bottom: 5px; */
 }
 .logo{
-    width: 80px;
+    width: 100%;
+
 }
 .icon {
-    width: 80px;
+    width: 50px;
     padding-top: 10px;
 }
 
 /*--------------------------------------*/
 
-/* body, html {
-    height: 100%;
-    margin: 0;
-    font: 400 15px/1.8 "Lato", sans-serif;
-    color: #777;
-  } */
+
   
   .bgimg-1, .bgimg-2, .bgimg-3 {
     position: relative;
-    opacity: 0.65;
+    opacity: 0.75;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -79,17 +85,18 @@ nav a:link, nav a:visited {
   
   }
   .bgimg-1{
-    background-image: url("../img/AI.jpg");
-    min-height: 400%;
+    background-image: url("../img/AIHumanRobot2.jpg");
+    min-height: 400px;
+   ;
   }
   
   .bgimg-2 {
-    background-image: url("../img/AIHumanRobot.jpg");
+    background-image: url("../img/NeuronalNetworks.jpg");
     min-height: 400px;
   }
   
   .bgimg-3 {
-    background-image: url("../img/AIHumanRobot2.jpg");
+    background-image: url("../img/AIHumanRobot.jpg");
     min-height: 400px;
   }
   
@@ -99,25 +106,348 @@ nav a:link, nav a:visited {
     top: 50%;
     width: 100%;
     text-align: center;
-    color: #000;
+    color: var(--headline-color-on-white);;
   }
   
   .caption span.border {
-    background-color: #111;
-    color: #fff;
+    background-color: var(--headline-color-on-white);
+    color: var(--headline-color-on-color);
     padding: 18px;
     font-size: 25px;
     letter-spacing: 10px;
+    opacity: 0.65;
   }
   
   h3 {
     letter-spacing: 5px;
     text-transform: uppercase;
-    font: 20px "Lato", sans-serif;
+    font-family: var(--heading-font);
     color: #111;
+    text-align: center;
   }
+  ul li{
+    font-family: var(--paragraph-font);
+    text-align: justify;
+    padding: 1rem;
+    margin: 15px 30px;
+
+  }
+  main p, main p li{
+    text-align: justify;
+    padding: 1rem;
+    margin: 15px 30px;
+  }
+  
+/* ------------------------Learning Path - Page------------------------ */
+
+.lp_title{
+  font-family: var(--heading-font);
+  font-size: 1.5em;
+  margin-top: 10px;
+  text-align: center;
+  color: #111;
+  letter-spacing: 5px;
+}
+.lp-name{
+  font-family: var(--heading-font);
+  font-size: 1em;
+  margin-top: 10px;
+  color: var(--headline-color-on-white);
+  letter-spacing: 2px;
+}
+
+.lp-p{
+  font-family: var(--paragraph-font);
+  margin-left: 30px;
+}
+#lp-p{
+  font-size: 1.3rem;
+  font-family: var(--paragraph-font);
+}
+ .link{
+  text-decoration: none;
+  font-size: 1rem;
+  color: var(--headline-color-on-white);
+ }
+ .link:hover{
+  color: var(--nav-hover-background-color);
+ }
+
+.lp-grid{
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 30px;
+  padding: 10px;
+  margin-bottom:20px;
+  }
+.lp-name{
+  text-align: center;
+}
+.lp1{
+  grid-column: 1/2;
+  grid-row: 1/2;
+  text-align: justify;
+  margin-left: 30px;
+}
+.learningPath-img1{
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+.learningPath-img1 img{
+  width: 600px;
+  height: 400px;
+  margin-left:50px;
+
+}
+.lp2{
+  grid-column: 2/3;
+  grid-row: 2/3;
+  text-align: justify;
+  margin-right: 30px;
+}
+.learningPath-img2{
+  grid-column: 1/2;
+  grid-row: 2/3;
+  
+}
+.learningPath-img2 img{
+  width: 600px;
+  height: 400px;
+  margin-left: 50px;
+  margin-top: 30px;
+}
+.lp2 li{
+  list-style: none;
+  font-family: var(--paragraph-font);
+  font-size: .8em;
+  margin-left: 30px;
+}
+
+.lp3{
+  grid-column: 1/3;
+  grid-row: 4/5;
+  margin: 0px 30px;
+  text-align: center;
+}
+.learningPath-img3 img{
+  width: 800px;
+  height: 500px;
+}
+.lp3 li{
+  list-style: none;
+  font-family: var(--paragraph-font);
+  font-size: .8em;
+  margin-left: 30px;
+}
+
+.lp3 p:nth-child(1){
+  font-weight: bold;
+}
+.lp3 a{
+  text-decoration: none;
+  color: var(--headline-color-on-white);
+}
+.lp3 a:hover{
+  color: var(--nav-hover-background-color);
+}
+
+ul li:before{
+  list-style: none;
+  content: '✔';
+}
+
+.learningPath-img{
+  border: 1px solid var(--headline-color-on-white);
+  border-radius: 4px;
+  padding: 5px;
+}
+.learningPath-img:hover{
+  /* opacity: .6;
+  transform: scale(1.1); */
+  box-shadow: 0 0 3px 2px var(--nav-hover-background-color);
+  cursor: pointer;
+}
+
+/* ------------------------Bokks and Projects Page------------------------ */
+
+.container {
+  position: relative;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.container img {
+  vertical-align: middle;
+  width: 100%;
+  height: 700px;
+}
+.content {
+  position: absolute;
+  bottom: 0;
+  background: rgb(0, 0, 0); /* Fallback color */
+  background:  rgb(14, 84, 177, 0.4); /* Black background with 0.5 opacity */
+  color: var(--headline-color-on-color);
+  /* width: 100%; */
+  /* height: 150px; */
+  padding: 20px;
+}
+/* .content{
+  width: 100%;
+} */
+.b-recomendations{
+  margin:0 30px;
+  text-align: center;
+}
+.b-recomendations p{
+  text-align: justify;
+}
+.b-recomendations p a{
+  text-decoration: none;
+  color: var(--headline-color-on-white);
+}
+.b-recomendations p a:hover{
+  color: var(--nav-hover-background-color)
+}
+.recomendations_list{
+  list-style: none;
+  text-align: justify;
+}
+
+.row_grid{
+  grid-template-columns: auto auto auto;
+  display: grid;
+  column-gap: 20px;
+  margin: 20px 30px;
+}
+
+.column1{
+  grid-column: 1/2;
+  margin: auto 0;
+
+}
+.column2{
+  grid-column: 2/3;
+  
+}
+.column3{
+  grid-column: 3/4;
+  margin: auto 0;
+}
+.column1 img, .column2 img, .column3 img{
+border-radius: 5px;
+border: 1px solid var(--paragraph-background-color);
+}
+.column1 img:hover, .column2 img:hover, .column3 img:hover{
+  opacity: 0.7;
+  cursor:pointer;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
 
+/* ------------------------Contact Us Page------------------------ */
+.mainform{
+  margin: 50px auto;
+}
+h4{
+  text-align: center;
+  letter-spacing: 3px;
+  font-family: var(--heading-font);
+  color: #111;
+  text-align: center;
+}
+
+
+
+form {
+  /* Center the form on the page */
+  margin: 0 auto;
+  width: 400px;
+  /* Form outline */
+  padding: 1em;
+  border: 1px solid var(--headline-color-on-white);
+  border-radius: 1em;
+}
+
+label {
+  /* Uniform size & alignment */
+  display: inline-block;
+  width: 90px;
+  text-align: right;
+  color: var(--headline-color-on-white);
+  margin: 15px 0;
+}
+
+input,
+textarea {
+  /* To make sure that all text fields have the same font settings
+     By default, textareas have a monospace font */
+  font: 1em sans-serif;
+
+  /* Uniform text field size */
+  width: 300px;
+  box-sizing: border-box;
+
+  /* Match form field borders */
+  border: 1px solid var(--headline-color-on-white);
+  margin-top: 15px;
+}
+
+input:focus,
+textarea:focus {
+  /* Additional highlight for focused elements */
+  border-color: var(--headline-color-on-white);
+}
+
+textarea {
+  /* Align multiline text fields with their labels */
+  vertical-align: top;
+
+  /* Provide space to type some text */
+  height: 5em;
+}
+
+.button {
+  font-size: 16px;
+  padding: 10px 15px;
+  margin-top: 20px;
+  color: var(--headline-color-on-white);
+  border-radius: 5px;
+  border: none;
+  background-color:var(--headline-color-on-white);
+  color: var(--headline-color-on-color);
+}
+
+button {
+  margin: 0 auto auto;
+  display: block;
+ 
+}
+
+.button:hover{
+  background-color: var(--nav-hover-background-color);
+  color:var(--headline-color-on-color);
+  /* border: 1px solid #396E94; */
+  cursor: pointer;
+} 
+
+#feedback {
+  background-color:var(--nav-hover-background-color);
+  color:var(--headline-color-on-color);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: .5em;
+  /* make this element invisible until we are ready for it */
+  display: none;      
+}
+.moveDown {
+  margin-top: 3em;
+}.home-title{
+  text-align: center;
+}
+
+/* ------------------------FOOTER------------------------ */
 
 footer{
     background-color: var(--nav-background-color);
@@ -147,8 +477,7 @@ footer .social img{
     padding-top: 15px;
 }
 
-
-/* Responsive design */
+/* ------------------------Responsive design------------------------ */
 
 @media screen and (max-width: 900px) {
 
@@ -160,10 +489,6 @@ footer .social img{
         padding: 15px;
     }
 
- 
-    footer {
-        margin-top: 25px;
-    }
 }
       /* Turn off parallax scrolling for tablets and phones */
 @media only screen and (max-device-width: 1024px) {
