--- a/brainTech/styles/styles.css
+++ b/brainTech/styles/styles.css
@@ -491,8 +491,8 @@ footer .social img{
 
 }
       /* Turn off parallax scrolling for tablets and phones */
-@media only screen and (max-device-width: 1024px) {
+/* @media only screen and (max-device-width: 1024px) {
     .bgimg-1, .bgimg-2, .bgimg-3 {
       background-attachment: scroll;
     }
-  }
+  } */
