--- a/brainTech/styles/styles.css
+++ b/brainTech/styles/styles.css
@@ -15,7 +15,7 @@
 }
 
 
-body, html {
+body {
   height: 100%;
   margin: 0 auto;
   font: 400 18px/1.8 "Lato", sans-serif;
@@ -179,6 +179,7 @@ nav a:link, nav a:visited {
   gap: 30px;
   padding: 10px;
   margin-bottom:20px;
+  max-width: 100%;
   }
 .lp-name{
   text-align: center;
@@ -287,8 +288,7 @@ ul li:before{
   background: rgb(0, 0, 0); /* Fallback color */
   background:  rgb(14, 84, 177, 0.4); /* Black background with 0.5 opacity */
   color: var(--headline-color-on-color);
-  /* width: 100%; */
-  /* height: 150px; */
+  max-width: 100%;
   padding: 20px;
 }
 /* .content{
@@ -486,10 +486,17 @@ footer .social img{
     }
     nav a {
         display: block;
-        padding: 15px;
+        padding: 2px;
     }
-
-}
+    .lp-grid{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      }
+    .learningPath-img1 img, .learningPath-img2 img, .learningPath-img3 img{
+      width: 80%;
+    }
+  }
       /* Turn off parallax scrolling for tablets and phones */
 /* @media only screen and (max-device-width: 1024px) {
     .bgimg-1, .bgimg-2, .bgimg-3 {
