--- a/brainTech/styles/styles.css
+++ b/brainTech/styles/styles.css
@@ -139,9 +139,7 @@ nav a:link, nav a:visited {
   }
   
 /* ------------------------Learning Path - Page------------------------ */
-.content{
-  max-width: 100%;
-}
+
 .lp_title{
   font-family: var(--heading-font);
   font-size: 1.5em;
@@ -284,15 +282,18 @@ ul li:before{
   width: 100%;
   height: 600px;
 }
+#content{
+  max-width: 100%;
+}
 .content {
   position: absolute;
   bottom: 0;
   background: rgb(0, 0, 0); /* Fallback color */
   background:  rgb(14, 84, 177, 0.4); /* Black background with 0.5 opacity */
   color: var(--headline-color-on-color);
-  max-width: 100%;
   padding: 20px;
 }
+
 .b-recomendations{
   margin:0 30px;
   text-align: center;
